Refatora organização de pastas e nomeclatura de arquivos
